[FE-14][bug] fix the background darkness on iphone with correct size setup for gradient layer

--- a/src/styles/Animes.module.scss
+++ b/src/styles/Animes.module.scss
@@ -1,6 +1,7 @@
 .background {
-  background-size: auto 400px;
-  background-blend-mode: darken;
+  background-size: cover, auto 400px;
+  background-repeat: no-repeat;
+  background-position: center, top;
 }
 
 .titleContainer {
